--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "prebuild": "babel src -d assets",
-    "build": "browserify src/cookie-consent.js -o assets/cookie-consent.js"
+    "build": "browserify src/cookie-consent.js --plugin tinyify > assets/cookie-consent.js"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,8 @@
     "babel-preset-env": "^1.7.0",
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
-    "npm-run-all": "^4.1.3"
+    "npm-run-all": "^4.1.3",
+    "tinyify": "^2.4.3"
   },
   "babel": {
     "presets": [
@@ -33,6 +34,8 @@
     ]
   },
   "browserify": {
-    "transform": ["babelify"]
+    "transform": [
+      "babelify"
+    ]
   }
 }
